configured linter same as howfairis

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,6 @@
-[metadata]
-description-file = README.rst
-
 [aliases]
 # Define `python setup.py test`
 test=pytest
-
-[coverage:run]
-branch = True
-source = fairtally
-
-[tool:pytest]
-testpaths = tests
-addopts = --cov --cov-report xml --cov-report term --cov-report html
 
 # Define `python setup.py build_sphinx`
 [build_sphinx]
@@ -19,3 +8,22 @@ source-dir = docs
 build-dir = docs/_build
 all_files = 1
 builder = html
+
+[coverage:run]
+branch = True
+source = fairtally
+
+[metadata]
+description-file = README.rst
+
+[tool:pytest]
+testpaths = tests
+addopts = --cov --cov-report xml --cov-report term --cov-report html
+
+[tool:isort]
+lines_after_imports = 2
+force_single_line = 1
+no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+known_first_party = fairtally
+src_paths = fairtally,tests,livetests
+line_length = 120
