--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -e .[dev]
       - name: Check style against standards using prospector
         shell: bash -l {0}
         run: prospector -o grouped -o pylint:pylint-report.txt
@@ -37,5 +37,4 @@ jobs:
       - name: Test
         shell: bash -l {0}
         run: |
-          python setup.py test
           pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
