--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -11,12 +11,12 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
       - name: lint .github/ directory
-        uses: docker://github/super-linter:v3
+        uses: github/super-linter:v3
         env:
           VALIDATE_ALL_CODEBASE: true
           FILTER_REGEX_INCLUDE: /github/workspace/.github/.*
       - name: lint the code
-        uses: docker://github/super-linter:v3
+        uses: github/super-linter:v3
         env:
           VALIDATE_BASH: true
           VALIDATE_BASH_EXEC: true
