--- a/fairtally/data/index.html.template
+++ b/fairtally/data/index.html.template
@@ -167,7 +167,7 @@
         return {
           columns,
           rows,
-          filter: ref('')
+          filter: ref(''),
           pagination: {
             rowsPerPage: 0
           },
