add bump2version config andset the current version to 0.0.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[bumpversion]
+current_version = 0.0.0
+
+[bumpversion:file:fairtally/__version__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
+
+[bumpversion:file:CITATION.cff]
+search = version: "{current_version}"
+replace = version: "{new_version}"
+
 [aliases]
 # Define `python setup.py test`
 test=pytest
