--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,10 @@ current_version = 0.0.0
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
+[bumpversion:file:setup.py]
+search = version="{current_version}"
+replace = version="{new_version}"
+
 [bumpversion:file:CITATION.cff]
 search = version: "{current_version}"
 replace = version: "{new_version}"
