--- a/fairtally/data/index.html.template
+++ b/fairtally/data/index.html.template
@@ -174,7 +174,7 @@
         name: 'expand',
         required: true,
         label: '',
-        field: 'expand',
+        field: 'stderr',
         align: 'center'
       },
     ];
